--- a/ingredients.css
+++ b/ingredients.css
@@ -4,7 +4,7 @@
 .bun-top {
   height: 70px;
   width: 60%;
-  background: #e5b05a;
+  background: #cd9741;
   border-radius: 100px 100px 20px 20px;
   border-bottom: solid 10px rgba(0,0,0,.1);
 }
@@ -12,21 +12,21 @@
 .cheese {
   height: 15px;
   width: 65%;
-  background: #f2c120;
+  background: #ffd036;
   border-bottom: solid 2px rgba(0,0,0,.1);
 }
 
 .tomato {
-  height: 25px;
-  width: 50%;
-  background-color: #dd3710;
+  height: 20px;
+  width: 60%;
+  background-color: #db411f;
   border-bottom: solid 2px rgba(0,0,0,.1);
 }
 
 .meatball {
   height: 60px;
   width: 70px;
-  background: #74380d;
+  background: #5e300e;
   border-radius: 50px;
   display: inline-block;
   vertical-align: top;
@@ -35,29 +35,30 @@
 .patty {
   height: 35px;
   width: 65%;
-  background: #ad370b;
+  background: #712a10;
   border-radius: 15px;
   border-bottom: solid 2px rgba(0,0,0,.1);
 }
 
 .pickle {
-  height: 30px;
-  width: 50%;
-  background: #3ac67d;
+  height: 15px;
+  width: 20%;
+  background: #3ac64f;
   border-radius: 0 0 100px 100px;
   border-bottom: solid 10px #2d9961;
+  display: inline-block;
 }
 
 .onion {
   width: 40%;
-  background-color: #a039bf;
+  background-color: #86459a;
   border-top: dotted 20px rgba(255,255,255,.2);
 }
 
 .bun-bottom {
   height: 35px;
   width: 60%;
-  background: #e5b05a;
+  background: #fcc367;
   border-radius: 20px 20px 40px 40px;
   border-top: solid 8px rgba(0,0,0,.1)
 }
@@ -65,6 +66,6 @@
 .plate {
   height: 25px;
   width: 80%;
-  background: #656565;
+  background: #605b5b;
   border-radius: 20px 20px 200px 200px;
 }
